--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,10 +1,18 @@
 .App {
   text-align: center;
+  
 }
 
 .App-header {
   background-color: #222;
+  width: 100%;
   height: 50px;
   padding: 20px;
   color: white;
+  display: inline-flex
+}
+.App-header__logo {
+  width: 30rem;
+  height: 20%;
+  padding: 5px;
 }
