--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,10 +9,18 @@
   height: 50px;
   padding: 20px;
   color: white;
-  display: inline-flex
+  display: flex;
 }
 .App-header__logo {
-  width: 30rem;
-  height: 20%;
-  padding: 5px;
+  width: 15rem;
+  height: 50px;
+  padding: 0px;
+  align-self: flex-start;
+}
+.logo {
+  width: 60px;
+  height: 60px;
+}
+.app-header__title {
+  align-self: center;
 }
