--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,16 +1,22 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   
 }
 
 .App-header {
-  background-color: #222;
-  width: 100%;
+  background-image:linear-gradient(45deg, lightblue, blue);
+  width: 100vw;
   height: 50px;
   padding: 20px;
   color: white;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 .App-header__logo {
   width: 15rem;
   height: 50px;
@@ -22,5 +28,5 @@
   height: 60px;
 }
 .app-header__title {
-  align-self: center;
+  align-self: flex-end;
 }
