--- a/src/components/Event/Event.css
+++ b/src/components/Event/Event.css
@@ -17,7 +17,7 @@
 
 .event__info {
     grid-area: event__info;
-    background-color: gray;
+    background-color: #f2f2f2;
     text-align: center;
 }
 
